--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,5 @@ jobs:
         uses: Azure/k8s-deploy@v3.1
         with:
           images: orlandirafael/kube-news:${{github.run_number}}
-          context: ./src
           manifests: |
-            k8s/deployment.yaml
+            ./src/k8s/deployment.yaml
