--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Docker Login
+      - name: Autenticando o usuário no docker
         uses: docker/login-action@v2.0.0
         with:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
           
-      - name: Build and push Docker images
+      - name: Construindo a imagem e enviando para o docker-hub
         uses: docker/build-push-action@v3.0.0
         with:
           file: ./src/Dockerfile
@@ -35,13 +35,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
   
-      - name: Kubernetes Set Context
+      - name: Define o contexto do kubernets
         uses: Azure/k8s-set-context@v2
         with:
           method: kubeconfig
           kubeconfig: $${{secrets.K8S_CONFIG}}
 
-      - name: Deploy to Kubernetes cluster
+      - name: Efetua o deploy no cluster kubernetes
         uses: Azure/k8s-deploy@v3.1
         with:
           images: orlandirafael/kube-news:${{github.run_number}}
