--- a/src/k8s/deployment.yaml
+++ b/src/k8s/deployment.yaml
@@ -46,7 +46,7 @@ kind: Deployment
 metadata:
   name: kubenews
 spec:
-  replicas: 2
+  replicas: 10
   selector:
     matchLabels:
       app: kubenews
@@ -54,6 +54,10 @@ spec:
     metadata:
       labels:
         app: kubenews
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: kube-news
